docs: regenerate swag docs
